force-app/main/default/objects/Timeline_Configuration__mdt/fields/Allow_Drilldown__c.field-meta.xml
<CustomField>
    <fullName>Allow_Drilldown__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Does this record support drilling into the detail</inlineHelpText>
    <label>Allow Drilldown</label>
    <type>Checkbox</type>
</CustomField>