force-app/main/default/objects/Timeline_Configuration__mdt/fields/Drilldown_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Drilldown_Id_Field__c</fullName>
    <description>The Id field to use when navigating on click of a record in the timeline. Used to support the ability to show a junction object record but drill into a parent.</description>
    <inlineHelpText>The Id field to use when navigating on click of a record in the timeline. If blank the Id of the record plotted will be used.</inlineHelpText>
    <label>Drilldown Id Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>