force-app/main/default/objects/Timeline_Configuration__mdt/fields/Fallback_Tooltip_Field__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Tooltip_Field__c</fullName>
    <inlineHelpText>The API Name of the field to use in tooltips when the object is not supported by the UI API</inlineHelpText>
    <label>Fallback Tooltip Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>