force-app/main/default/objects/Timeline_Configuration__mdt/fields/Filter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Display_Name__c</fullName>
    <inlineHelpText>The name to display in the filter for this object</inlineHelpText>
    <label>Filter Display Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>