force-app/main/default/objects/Timeline_Configuration__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <inlineHelpText>The icon to use for this object type</inlineHelpText>
    <label>Icon</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>