force-app/main/default/objects/Timeline_Configuration__mdt/fields/Icon_Background_Colour__c.field-meta.xml
<CustomField>
    <fullName>Icon_Background_Colour__c</fullName>
    <inlineHelpText>The background colour to use for the icon</inlineHelpText>
    <label>Icon Background Colour</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>