force-app/main/default/objects/Timeline_Configuration__mdt/fields/Icon_Background_Colour_Field__c.field-meta.xml
<CustomField>
    <fullName>Icon_Background_Colour_Field__c</fullName>
    <inlineHelpText>The background colour for the icon based on a formula field allowing different colours</inlineHelpText>
    <label>Icon Background Colour (Field)</label>
    <length>180</length>
    <type>Text</type>
</CustomField>