force-app/main/default/objects/Timeline_Configuration__mdt/fields/Icon_Field__c.field-meta.xml
<CustomField>
    <fullName>Icon_Field__c</fullName>
    <inlineHelpText>The icon to use based on a formula field allowing you to dynamically select an icon</inlineHelpText>
    <label>Icon (Field)</label>
    <length>180</length>
    <type>Text</type>
</CustomField>