force-app/main/default/objects/Timeline_Configuration__mdt/fields/Inclusion_Field__c.field-meta.xml
<CustomField>
    <fullName>Inclusion_Field__c</fullName>
    <description>The API Name of a field that evaluates to TRUE when a record should be included in the plotted results</description>
    <inlineHelpText>The API Name of a field that evaluates to TRUE when a record should be included in the plotted results</inlineHelpText>
    <label>Inclusion Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>