force-app/main/default/objects/Timeline_Configuration__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>The sObject API Name that defines the child record</inlineHelpText>
    <label>Object Name</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>