force-app/main/default/objects/Timeline_Configuration__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>The Parent Objects API Name that the child record applies to</inlineHelpText>
    <label>Parent Object</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>