force-app/main/default/objects/Timeline_Configuration__mdt/fields/Position_End_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Position_End_Date_Field__c</fullName>
    <label>Position End Date Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>