force-app/main/default/objects/Timeline_Configuration__mdt/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>The API name corresponding to the relationship between the objects.</description>
    <inlineHelpText>The API name corresponding to the relationship between the objects.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>