force-app/main/default/objects/Timeline_Configuration__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>The order the object appears in the filter</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>