force-app/main/default/objects/Timeline_Configuration__mdt/fields/Tooltip_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Tooltip_Object_Name__c</fullName>
    <description>The sObject API name for the tooltip.</description>
    <inlineHelpText
    >If the UI API is supported but you want a related record shown specify the sObject API name to use when hovering here.</inlineHelpText>
    <label>Tooltip Object Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>