force-app/main/default/objects/Timeline_Configuration__mdt/fields/Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Type_Field__c</fullName>
    <inlineHelpText>The field used for Task sObject type only</inlineHelpText>
    <label>Type Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>