force-app/main/default/objects/Timeline_Configuration__mdt/validationRules/No_External_Objects_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_External_Objects_Allowed</fullName>
    <active>true</active>
    <description>Timeline is not a good option for External Objects</description>
    <errorConditionFormula>IF ( CONTAINS( Object_Name__c, &#39;__x&#39;), true, false)</errorConditionFormula>
    <errorDisplayField>Object_Name__c</errorDisplayField>
    <errorMessage
    >External Objects cannot be used in the timeline. Timeline supports standard and custom objects only.</errorMessage>
</ValidationRule>